per-node-execution-policy stage b: A new NodeGraph.Run inner class carries one run's context + cancellation token + a pending-firing counter. The run ends when that counter hits zero, which is also what awaitIdle() waits on. Linear order is preserved (a node fires downstream only after its own process()); only the "wait for all branches" barrier is gone — so reconvergence now needs explicit joins (Stage C). The event-source prepare step runs inside the run's context, so concurrent event bursts keep isolated payloads. The resolution lock is now per-run (ExecutionContext.lockFor) instead of the node object, so two PARALLEL runs sharing a node don't serialize on process() — that's what makes parallel actually parallel.